--- a/index.html
+++ b/index.html
@@ -24,19 +24,21 @@
   </head>
 
   <body>
-    <header>
-      <h1>Twimba</h1>
-    </header>
-    <main>
-      <div class="tweet-input-area">
-        <img src="images/spiderman.jpeg" class="profile-pic" />
-        <textarea placeholder="What's happening?" id="tweet-input"></textarea>
-      </div>
-      <button id="tweet-btn">Tweet</button>
-      <div class="feed" id="feed">
-        <!-- Tweets go here -->
-      </div>
-    </main>
-    <script src="index.js" type="module"></script>
+    <div class="header-container"
+      <header>
+        <h1>Twimba</h1>
+      </header>
+      <main>
+        <div class="tweet-input-area">
+          <img src="images/spiderman.jpeg" class="profile-pic" />
+          <textarea placeholder="What's happening?" id="tweet-input"></textarea>
+        </div>
+        <button id="tweet-btn">Tweet</button>
+        <div class="feed" id="feed">
+          <!-- Tweets go here -->
+        </div>
+      </main>
+      <script src="index.js" type="module"></script>
+    </div>
   </body>
 </html>
