Fix HTML structure by closing div tag

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
 
   <body>
-    <div class="header-container"
+    <div class="box-container"
       <header>
         <h1>Twimba</h1>
       </header>
